added 0 to clear cart

--- a/shopping.html
+++ b/shopping.html
@@ -38,7 +38,7 @@ let addQuantity = quantity += 1;
 let plusTwo = quantity += 2;
 let addThree = quantity + 3;
 let showQuantity = addQuantity+ plusTwo + addThree;
-let clearCart = quantity ;
+let clearCart = 0 ;
 
         
         
